--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html>
+  
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<button type="button">Click Me!</button>
+
+<style>
+.button {
+  border: none;
+  color: white;
+  padding: 12px 32px;
+  text-allign: center;
+}
+.button1 {background-color: #4CAF50;} /* Green */
+.button2{background-color: #008CBA;} /* Blue */
+</style>
+<h1>Hello, World!</h1>
+<p>Fakebook</p>
+<button type="button button1">Button</button>
+<button type="button button1">Button</button>
 </body>
+  
 </html>
