--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html>
-  
-<body>
-
+<head> 
 <style>
 .button {
   border: none;
   color: white;
   padding: 12px 32px;
   text-allign: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 .button1 {background-color: #4CAF50;} /* Green */
 .button2{background-color: #008CBA;} /* Blue */
 </style>
+</head>
+  
+
+<body>
+
+
 <h1>Hello, World!</h1>
 <p>Fakebook</p>
-<button type="button button1">Button</button>
-<button type="button button1">Button</button>
-</body>
+<button class="button button1">Green</button>
+<button class="button button2">Blue</button>
+
   
+</body>  
 </html>
