--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 </head>
   
 
-<body style = "background-color:#CFCFFF>
+<body style="background-color:#CFCFFF;">
 
-
-<h1>Hello, World!</h1>
-<p>Fakebook</p>
+<title>Fakebook
+<h1>"Where inspiration synthesises from pixels."</h1>
+<p>- Mackenzie Moore 2k20</p>
 <button class="button button1">Green</button>
 <button class="button button2">Blue</button>
 
