--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body style="background-color:#CFCFFF;">
 
-<title>Fakebook
+  <title>Fakebook</title>
 <h1>"Where inspiration synthesises from pixels."</h1>
 <p>- Mackenzie Moore 2k20</p>
 <button class="button button1">Green</button>
