--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head> 
 <style>
+  
 .button {
   border: none;
   color: white;
@@ -13,8 +14,18 @@
   margin: 4px 2px;
   cursor: pointer;
 }
-.button1 {background-color: #4CAF50;} /* Green */
-.button2{background-color: #008CBA;} /* Blue */
+.button1 {
+  background-color: #4CAF50;
+} /* Green */
+.button2{
+  background-color: #008CBA;
+} /* Blue */
+  
+.button1:hover {
+    color: #000!important;
+    background-color: #ccc!important;
+}
+ 
 </style>
 </head>
 <title>Fakebook</title> 
