--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 } /* Blue */
   
 .button1:hover {
-    color: #000!important;
-    background-color: #ccc!important;
+    color: #000;
+    background-color: #ccc;
 }
  
 </style>
@@ -35,9 +35,14 @@
   
 <h1>"Where inspiration synthesises from pixels."</h1>
 <p>- Mackenzie Moore 2k20</p>
-<button class="button button1">Green</button>
+<button id="b1" onclick="myfunction()" class="button button1">Green</button>
 <button class="button button2">Blue</button>
 
+<script>
+  function myfunction() {
+    document.getElementById("demo").style.color = "red";
+}
+</script>
   
 </body>  
 </html>
