--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <script>
   function myfunction() {
-    document.getElementById("demo").style.color = "red";
+    document.getElementById("b1").style.color = "red";
 }
 </script>
   
