--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
 <h1>"Where inspiration synthesises from pixels."</h1>
 <p>- Mackenzie Moore 2k20</p>
-<button id="b1" onclick="myfunction()" class="button button1">Green</button>
+<button id="b1" onclick="myfunction()" href="page1" class="button button1">Green</button>
 <button class="button button2">Blue</button>
 
 <script>
