--- a/index.html
+++ b/index.html
@@ -32,19 +32,14 @@
 
 <body style="background-color:#CFCFFF;">
 
-  
+<div class="w3-bar w3-black">
+  <div class="w3-bar-item">Fakebook</div>
 <h1>"Where inspiration synthesises from pixels."</h1>
 <p>- Mackenzie Moore 2k20</p>
-<button id="b1" onclick="myfunction()" class="button button1">Green</button>
+  <p>Why does it hurt when I pee</p>
+<button class="button button1">Green</button>
 <button class="button button2">Blue</button>
 
-<script>
-  function myfunction() {
-    document.getElementById("b1").style.color = "red";
-    await new Promise(r => setTimeout(r, 5));
-    document.getElementById("b1").style.color = "black";
-}
-</script>
-  
+
 </body>  
 </html>
