--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 <div class="w3-bar w3-black">
   <div class="w3-bar-item">Fakebook</div>
+</div>
 <h1>"Where inspiration synthesises from pixels."</h1>
 <p>- Mackenzie Moore 2k20</p>
   <p>Why does it hurt when I pee</p>
