--- a/index.html
+++ b/index.html
@@ -1,46 +1,34 @@
 <!DOCTYPE html>
-<html>
-<head> 
-<style>
-  
-.button {
-  border: none;
-  color: white;
-  padding: 12px 32px;
-  text-allign: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+  </head>
+  <style>
+    .header {
+      padding: 40px;
+      text-align: center;
+      background: #3d6fbf;
+      color: white;
+      font-size: 30px;
 }
-.button1 {
-  background-color: #4CAF50;
-} /* Green */
-.button2{
-  background-color: #008CBA;
-} /* Blue */
-  
-.button1:hover {
-    color: #000;
-    background-color: #ccc;
+    .button1 {
+      color: #636363;
+      background-color: #ededed;
+      padding: 12px 32px;
+      border: none;
 }
- 
-</style>
-</head>
-<title>Fakebook</title> 
+    .button1:hover {
+      color: #1a1a1a;
+      background-color: #c4c4c4;
+      cursor: pointer;
+}
 
-<body style="background-color:#CFCFFF;">
-
-<div class="w3-bar w3-black">
-  <div class="w3-bar-item">Fakebook</div>
-</div>
-<h1>"Where inspiration synthesises from pixels."</h1>
-<p>- Mackenzie Moore 2k20</p>
-  <p>Why does it hurt when I pee</p>
-<button class="button button1">Green</button>
-<button class="button button2">Blue</button>
-
-
-</body>  
+  </style>
+  <body style="background-color:#ededed;">
+    <div class="header">
+      <h1>Fakebook</h1>
+    </div>
+    <button class="button button1">Home</button>
+  </body>
 </html>
