--- a/index.html
+++ b/index.html
@@ -12,23 +12,46 @@
       color: white;
       font-size: 30px;
 }
-    .button1 {
+    .siderow {
       color: #636363;
       background-color: #ededed;
-      padding: 12px 32px;
+      padding: 12px 30px;
+      display: flex;
+      width:200px;
       border: none;
-}
-    .button1:hover {
-      color: #1a1a1a;
-      background-color: #c4c4c4;
-      cursor: pointer;
-}
 
+}
+    .siderow:hover {
+      color: #1a1a1a;
+      background-color: #d1d1d1;
+      cursor: pointer;
+      border: none;
+      border-left: 4px solid #3d6fbf;
+}
+    .wrapper-div {
+      position: relative;
+      vertical-align: left;
+      text-align: left;
+}
+    p {
+      margin: 0;
+      padding: 0;
+}
   </style>
   <body style="background-color:#ededed;">
     <div class="header">
       <h1>Fakebook</h1>
     </div>
-    <button class="button button1">Home</button>
+    <img src="https://static.independent.co.uk/s3fs-public/thumbnails/image/2016/07/28/14/bulldog-gettyimages-528586718-0.jpg?width=982&height=726" width="200" height="200" style="padding:15px;padding-bottom:0;border:">
+    <p style="color:#3d3d3d;font-weight:lighter;font-family:Arial;font-size:20px;padding-left: 20px;padding-top:20px;padding-bottom:5px;">Mackenzie Moore</p>
+    <p style="color:#9e9e9e;font-weight:lighter;font-family:Arial;font-size:15px;padding-left: 20px;padding-bottom:10px;">@k3nzo505</p>
+    <div class="wrapper-div">
+      <button type="button" class="siderow">Home</button>
+      <button type="button" class="siderow">About</button>
+      <button type="button" class="siderow">Photos</button>
+      <button type="button" class="siderow">Likes</button>
+      <button type="button" class="siderow">Videos</button>
+      <button type="button" class="siderow">Posts</button>
+    </div>
   </body>
 </html>
