--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <p id="phrase">The world's most secure social media platform.</p>
     </div>
     <div class="topnav" id="mytopnav">
-      <a href="#home" class="active" style="float:left;padding:0;"><img style="height:70px;" id="logo" src="file:///Users/Kenzo/Desktop/Inter-Sphere-Logo.png" alt="logo"></a>
+      <a href="#home" class="active" style="float:left;padding:0;"><img style="height:70px;" id="logo" src="images/Inter-Sphere-Logo.png" alt="logo"></a>
       <a href="#profile" id="profile">Profile</a>
       <a href="#messages" id="messages">Messages</a>
       <a href="#home" class="active" id="home">Home</a>
