--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <body style="background:#222;">
     <div class="topnav" id="mytopnav">
       <div class="navoptions">
-        <a href="#home" style="padding-right:400px;"><img style="padding:7.5px 0;height:40px;" src="images/Logo.png" alt="file:///Users/Kenzo/Desktop/Inter-Sphere-Logo.png"></a>
+        <a href="#home" style="padding-right:400px;"><img style="padding:7.5px 0;height:40px;" src="images/Inter-Sphere-Logo.png" alt="file:///Users/Kenzo/Desktop/Inter-Sphere-Logo.png"></a>
         <a href="#home">Home</a>
         <a href="#messages">Messages</a>
         <a href="#profile">Profile</a>
