--- a/Login/index.html
+++ b/Login/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <style>
+  html, body {
+    font-family: arial;
+    margin: 0;
+  }
 
+  .topnav {
+    position: fixed;
+    padding: none;
+    overflow: hidden;
+    background: #242424;
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    height: 55px;
+    width: 100%;
+    border-bottom: 1px solid #666;
+    line-height: 55px;
+
+  }
+
+  .topnav a {
+    position: relative;
+    text-decoration: none;
+    font-family: Courier New;
+    font-size: 20px;
+    float: right;
+    margin: 0 15px;
+    height: 55px;
+    color: #fff;
+  }
+
+    .topnav a:hover {
+      color: #aaa
+    }
+
+  .navoptions {
+    padding: 0 20px;
+    -webkit-box-align: center;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    flex-direction: row;
+    max-width: 975px;
+    width: 100%;
+    justify-content: center;
+    box-sizing: border-box;
+    flex-shrink: 0;
+    margin: 0 auto;
+    position: relative;
+    font: inherit;
+    vertical-align: baseline;
+  }
+
+  </style>
+  <body style="background:#222;">
+    <div class="topnav" id="mytopnav">
+      <div class="navoptions">
+        <a href="#home" style="padding-right:400px;"><img style="padding:7.5px 0;height:40px;" src="file:///Users/Kenzo/Desktop/Inter-Sphere-Logo.png" alt="file:///Users/Kenzo/Desktop/Inter-Sphere-Logo.png"></a>
+        <a href="#home">Home</a>
+        <a href="#messages">Messages</a>
+        <a href="#profile">Profile</a>
+        <a href="#login">Login</a>
+      </div>
+    </div>
+  </body>
+</html>
