--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
   <body style="background:#222;">
     <div class="topnav" id="mytopnav">
       <div class="navoptions">
-        <a href="#home" style="padding-right:400px;"><img style="padding:7.5px 0;height:40px;" src="images/Inter-Sphere-Logo.png"></a>
-        <a href="#home">Home</a>
-        <a href="#messages">Messages</a>
-        <a href="#profile">Profile</a>
-        <a href="#login">Login</a>
+        <a href="/index.html" style="padding-right:400px;"><img style="padding:7.5px 0;height:40px;" src="images/Inter-Sphere-Logo.png"></a>
+        <a href="/index.html">Home</a>
+        <a href="/Messages/index.html">Messages</a>
+        <a href="/Profile/index.html">Profile</a>
+        <a href="/Login/index.html">Login</a>
       </div>
     </div>
     <div class="sidebox" id="sidebox">
