--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
   <body style="background:#222;">
     <div class="topnav" id="mytopnav">
       <div class="navoptions">
-        <a href="k3nzo-m.github.io" style="padding-right:400px;"><img style="padding:7.5px 0;height:40px;" src="images/Inter-Sphere-Logo.png"></a>
-        <a href="k3nzo-m.github.io">Home</a>
-        <a href="/Messages/">Messages</a>
-        <a href="/Profile/">Profile</a>
+        <a href="../k3nzo-m.github.io" style="padding-right:400px;"><img style="padding:7.5px 0;height:40px;" src="images/Inter-Sphere-Logo.png"></a>
+        <a href="../k3nzo-m.github.io">Home</a>
+        <a href="/Messages">Messages</a>
+        <a href="/Profile">Profile</a>
         <a href="/Login">Login</a>
       </div>
     </div>
