--- a/Messages/index.html
+++ b/Messages/index.html
@@ -64,9 +64,9 @@
       <div class="navoptions">
         <a href="https://k3nzo-m.github.io" style="padding-right:400px;"><img style="padding:7.5px 0;height:40px;" src="images/Inter-Sphere-Logo.png"></a>
         <a href="https://k3nzo-m.github.io">Home</a>
-        <a href="/Messages">Messages</a>
-        <a href="/Profile">Profile</a>
-        <a href="/Login">Login</a>
+        <a href="https://k3nzo-m.github.io/Messages/">Messages</a>
+        <a href="https://k3nzo-m.github.io/Profile/">Profile</a>
+        <a href="https://k3nzo-m.github.io/Login/">Login</a>
       </div>
     </div>
   </body>
