--- a/Login/index.html
+++ b/Login/index.html
@@ -62,7 +62,7 @@
   <body style="background:#222;">
     <div class="topnav" id="mytopnav">
       <div class="navoptions">
-        <a href="https://k3nzo-m.github.io" style="padding-right:400px;"><img style="padding:7.5px 0;height:40px;" src="images/Inter-Sphere-Logo.png"></a>
+        <a href="https://k3nzo-m.github.io" style="padding-right:400px;"><img style="padding:7.5px 0;height:40px;" src="https://k3nzo-m.github.io/images/Inter-Sphere-Logo.png"></a>
         <a href="https://k3nzo-m.github.io">Home</a>
         <a href="https://k3nzo-m.github.io/Messages/">Messages</a>
         <a href="https://k3nzo-m.github.io/Profile/">Profile</a>
