--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
 
       function hoveron(id) {
         //document.getElementById(id).className = 'material-icons-sharp';
-        document.getElementById(id).style.color = '#666'
+        document.getElementById(id).style.color = '#666';
       }
       function hoveroff(id) {
         //document.getElementById(id).className = 'material-icons-outlined';
-        document.getElementById(id).style.color = '#fff'
+        document.getElementById(id).style.color = '#fff';
       }
     </script>
   </body>
