--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <body style="background:#222;">
     <header>
     <div class="container">
-      <img class="logo" style="height:40px;" src="https://k3nzo-m.github.io/images/Inter-Sphere-Logo.png">
+      <img class="logo" style="height:40px;" src="https://k3nzo-m.github.io/resources/images/Inter-Sphere-Logo.png">
 
       <nav id="mytopnav">
         <ul>
@@ -141,7 +141,7 @@
     </header>
     <div class="sidebox" id="sidebox">
       <div class="profilecard">
-        <img style="height: 60px;border-radius:50%;position: relative; top: -25px;"src="https://k3nzo-m.github.io/images/profile.png">
+        <img style="height: 60px;border-radius:50%;position: relative; top: -25px;"src="https://k3nzo-m.github.io/resources/images/profile.png">
         <p style="position:relative; left: -65px;top: -50px;color:#aaa;">Followers</p>
         <p style="position:relative; left: +65px;top: -68px;color:#aaa;">Following</p>
         <p style="position:relative;top: -40px;color: #b6b6b6;">Mackenzie Moore</p>
