--- a/index.html
+++ b/index.html
@@ -5,129 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+    <link rel="stylesheet" href="resources/CSS/stylesheet.css">
   </head>
-  <style>
-    html, body {
-      font-family: arial;
-      margin: 0;
-    }
 
-    .container {
-    width: 80%;
-    margin: 0 auto;
-    }
-
-    header {
-      background: #242424;
-      border-bottom: 1px solid #666;
-      top: 0;
-      position: fixed;
-      width: 100%;
-    }
-
-    header::after {
-      content: '';
-      display: table;
-      clear: both;
-    }
-
-    .logo {
-      float: left;
-      padding: 10px 0;
-      cursor: pointer;
-    }
-
-    nav {
-      float: right;
-    }
-
-    nav ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-
-    nav li {
-      display: inline-block;
-      margin-left: 70px;
-      padding: 16px 0;
-      position: relative;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      text-transform: uppercase;
-      font-size: 14px;
-    }
-
-    .sidebox {
-      position: absolute;
-      top: 81px;
-      width: 400px;
-      height: 620px;
-      padding: 10px;
-      background: #222;
-
-    }
-
-    .profilecard {
-      text-align: center;
-      position: inherit;
-      width: 200px;
-      height: 200px;
-      border-radius: 10px;
-      border-top: 60px solid #666;
-      margin: 20px 105px 105px 105px;
-    }
-
-    .suggestions {
-      text-align: left;
-      width: 200px;
-      height: 300px;
-      margin: 260px 105px 0px 105px;
-    }
-
-    .credits {
-      text-align: left;
-      color: #888;
-      font-size: 10px;
-      margin: 20px 105px 0px 105px;
-    }
-
-    .feed {
-      padding: 80px 420px 0 440px;
-      text-align: left;
-      height: auto;
-    }
-
-    .post {
-      background: #303030;
-      border-radius: 5px;
-      border: 1px solid #666;
-      text-align: left;
-      height: 400px;
-      width: 600px;
-      margin-bottom: 30px;
-    }
-
-    .leftstick {
-      bottom: 0;
-      height: 620px;
-      position: fixed;
-    }
-
-    p {
-      margin: 0;
-      padding: 0px;
-    }
-
-  </style>
-  </head>
   <body style="background:#222;">
     <header>
     <div class="container">
-      <img class="logo" style="height:40px;" src="https://k3nzo-m.github.io/resources/images/Inter-Sphere-Logo.png">
+      <img class="logo" style="height:40px;" src="https://K3nzo-m.github.io/resources/images/Inter-Sphere-Logo.png">
 
       <nav id="mytopnav">
         <ul>
