--- a/Profile/index.html
+++ b/Profile/index.html
@@ -4,62 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+    <link rel="stylesheet" href="resources/CSS/stylesheet.css">
   </head>
-  <style>
-    html, body {
-      font-family: arial;
-      margin: 0;
-    }
-
-    .container {
-    width: 80%;
-    margin: 0 auto;
-    }
-
-    header {
-      background: #242424;
-      border-bottom: 1px solid #666;
-      top: 0;
-      position: fixed;
-      width: 100%;
-    }
-
-    header::after {
-      content: '';
-      display: table;
-      clear: both;
-    }
-
-    .logo {
-      float: left;
-      padding: 10px 0;
-      cursor: pointer;
-    }
-
-    nav {
-      float: right;
-    }
-
-    nav ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-
-    nav li {
-      display: inline-block;
-      margin-left: 70px;
-      padding: 16px 0;
-      position: relative;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      text-transform: uppercase;
-      font-size: 14px;
-    }
-  </style>
   <body style="background:#222;">
     <header>
     <div class="container">
@@ -67,10 +13,11 @@
 
       <nav id="mytopnav">
         <ul>
-          <li><a onmouseover="hoveron('home')" onmouseout="hoveroff('home')" href="https://k3nzo-m.github.io"><i class="material-icons-outlined" id="home">home</i></a></li>
-          <li><a onmouseover="hoveron('message')" onmouseout="hoveroff('message')" href="https://k3nzo-m.github.io/Messages/"><i class="material-icons-outlined" id="message">message</i></a></li>
-          <li><a onmouseover="hoveron('profile')" onmouseout="hoveroff('profile')" href="https://k3nzo-m.github.io/Profile/"><i class="material-icons-outlined" id="profile">account_circle</i></a></li>
-          <li><a onmouseover="hoveron('login')" onmouseout="hoveroff('login')" href="https://k3nzo-m.github.io/Login/"><i class="material-icons-outlined" id="login">login</i></a></li>
+          <li><input class="search" type="text" placeholder="Search..."></li>
+          <li><a href="https://k3nzo-m.github.io"><i class="material-icons-outlined" id="home">home</i></a></li>
+          <li><a href="https://k3nzo-m.github.io/Messages/"><i class="material-icons-outlined" id="message">message</i></a></li>
+          <li><a href="https://k3nzo-m.github.io/Profile/"><i class="material-icons-outlined" id="profile">account_circle</i></a></li>
+          <li><a href="https://k3nzo-m.github.io/Login/"><i class="material-icons-outlined" id="login">login</i></a></li>
         </ul>
       </nav>
     </div>
