--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="resources/CSS/stylesheet.css">
-    <script>src="https://K3nzo-m.github.io/resources/python"</script>
+    <script>src="https://K3nzo-m.github.io/resources/python/test.py"</script>
   </head>
 
   <body style="background:#222;">
