--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body style="background:#222;">
     <header>
     <div class="container">
-      <img class="logo" src="https://K3nzo-m.github.io/resources/images/Inter-Sphere-Logo.png">
+      <img class="logo" style="height:40px;" src="https://K3nzo-m.github.io/resources/images/Inter-Sphere-Logo.png">
 
       <nav id="mytopnav">
         <ul>
