--- a/Login/index.html
+++ b/Login/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="resources/CSS/stylesheet.css">
+    <link rel="stylesheet" href="../resources/CSS/stylesheet.css">
   </head>
   <body style="background:#222;">
     <header>
