--- a/Messages/index.html
+++ b/Messages/index.html
@@ -13,6 +13,7 @@
 
       <nav id="mytopnav">
         <ul>
+          <li><input class="search" type="text" placeholder="Search..."></li>
           <li><a href="https://k3nzo-m.github.io"><i class="material-icons-outlined" id="home">home</i></a></li>
           <li><a href="https://k3nzo-m.github.io/Messages/"><i class="material-icons-outlined" id="message">message</i></a></li>
           <li><a href="https://k3nzo-m.github.io/Profile/"><i class="material-icons-outlined" id="profile">account_circle</i></a></li>
