--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Intersphere</title>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="resources/CSS/stylesheet.css">
-    <script>src="https://K3nzo-m.github.io/resources/python/authentication.py"</script>
   </head>
 
   <body style="background:#222;">
